--- a/TowerAttack/Game Data.plist
+++ b/TowerAttack/Game Data.plist
@@ -4,11 +4,41 @@
 <dict>
 	<key>TowerStatsForLevel</key>
 	<array>
-		<string>6 0.5</string>
-		<string>8 0.4</string>
-		<string>10 0.3</string>
-		<string>12 0.2</string>
-		<string>14 0.1</string>
+		<array>
+			<string>10 100 0.5 1</string>
+			<string>12 110 0.4 1</string>
+			<string>15 120 0.35 1</string>
+			<string>18 125 0.3 1</string>
+			<string>20 135 0.25 1</string>
+		</array>
+		<array>
+			<string>0 70 0 0.5</string>
+			<string>0 80 0 0.4</string>
+			<string>0 85 0 0.35</string>
+			<string>0 90 0 0.3</string>
+			<string>0 92 0 0.25</string>
+		</array>
+		<array>
+			<string>20 55 2 1</string>
+			<string>30 60 1.8 1</string>
+			<string>35 65 1.6 1</string>
+			<string>40 70 1.5 1</string>
+			<string>55 72 1.3 1</string>
+		</array>
+		<array>
+			<string>0.2 150 0.05 1</string>
+			<string>0.3 160 0.05 1</string>
+			<string>0.35 170 0.05 1</string>
+			<string>0.4 180 0.05 1</string>
+			<string>0.45 200 0.04 1</string>
+		</array>
+	</array>
+	<key>TowerDescriptions</key>
+	<array>
+		<string>The fireball tower shoots deadly balls of fire at enemies within range.</string>
+		<string>This tower creates a frigid, icy aura around itself, slowing all enemies that enter it.</string>
+		<string>This tower fires off powerful blasts, doing heavy damage to all enemies in the danger zone.</string>
+		<string>The psychic tower emits constant psychic waves, causing the health of all enemies within its large area of effect to continuously drop.</string>
 	</array>
 </dict>
 </plist>
