--- a/TowerAttack/Game Data.plist
+++ b/TowerAttack/Game Data.plist
@@ -70,14 +70,28 @@
 			<string>0.8 0.9 0.8 0.7</string>
 			<string>0 0 0 1</string>
 			<string>0.85 0.95 0.85 1</string>
+			<string>0.09 0.34 0 1</string>
+			<string>1 0.99 0.79 0.7</string>
 		</array>
 		<array>
-			<string>0.75 0.09 0.01 0.9</string>
+			<string>0.67 0.26 0.22 0.7</string>
 			<string>0.584 0.263 0.188 0.7</string>
 			<string>0.584 0.263 0.188 0.7</string>
 			<string>0.584 0.263 0.188 0.7</string>
 			<string>0.75 0.75 0.75 1</string>
-			<string>0.78 0.455 0.376 1</string>
+			<string>0.27 0 0 1</string>
+			<string>0.62 0 0 1</string>
+			<string>0.86 0.76 0.76 1</string>
+		</array>
+		<array>
+			<string>0.38 0.32 0.16 0.7</string>
+			<string>0.57 0.5 0.36 0.7</string>
+			<string>0.57 0.5 0.36 0.7</string>
+			<string>0.57 0.5 0.36 0.7</string>
+			<string>0.24 0.16 0.004 1</string>
+			<string>0.89 0.84 0.74 1</string>
+			<string>0.37 0.25 0.01 1</string>
+			<string>1 0.96 0.88 1</string>
 		</array>
 	</array>
 </dict>
